--- a/src/assets/style/company.scss
+++ b/src/assets/style/company.scss
@@ -19,5 +19,30 @@
         text-align: center;
     }
 
+    @media (max-width: 991px) {
+        &__title {
+            font-size: 16px;
+        }
+
+        &__img {
+            margin-top: 10px;
+            width: calc(100%/3 - 20px);
+            height: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    @media (max-width: 767px) {
+        &__title {
+
+            font-size: 14px;
+
+        }
+    }
 
 }
