--- a/src/assets/style/feature.scss
+++ b/src/assets/style/feature.scss
@@ -21,18 +21,37 @@
     }
 
 
-    &__content {
+    &__content,
+    &__img {
         width: calc(100%/2 - 25px);
     }
 
     &__img {
-        width: calc(100%/2 - 25px);
-        ;
-
         img {
             width: 100%;
-            height: auto;
-            object-fit: cover;
+            height: 100%;
+            object-fit: contain;
         }
+    }
+
+    @media (max-width: 991px) {}
+
+
+    @media(max-width: 575px) {
+        &__main {
+            flex-direction: column;
+            flex-wrap: wrap;
+        }
+
+        &__content,
+        &__img {
+            width: 100%;
+            text-align: center;
+        }
+
+        &__img {
+            order: 2;
+        }
+
     }
 }
