--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -17,24 +17,24 @@ body {
     padding: 0 15px;
     width: 100%;
 
-    @media(min-width: 576px) {
-        max-width: 540px;
-    }
-
-    @media(min-width: 768px) {
-        max-width: 720px;
-    }
-
-    @media(min-width: 992px) {
-        max-width: 960px;
-    }
-
-    @media(min-width: 1200px) {
+    @media(max-width: 1399px) {
         max-width: 1140px;
     }
 
-    @media(min-width: 1400px) {
-        max-width: 1320px;
+    @media(max-width: 1199px) {
+        max-width: 960px;
+    }
+
+    @media(max-width: 991px) {
+        max-width: 720px;
+    }
+
+    @media(max-width: 767px) {
+        max-width: 540px;
+    }
+
+    @media(max-width: 575px) {
+        max-width: 100%;
     }
 }
 
@@ -104,4 +104,42 @@ body {
         line-height: 2;
         margin-bottom: 15px;
     }
+}
+
+
+@media (max-width: 991px) {
+    .btn {
+        padding: 10px 15px;
+        font-size: 14px;
+        white-space: nowrap;
+    }
+
+    .subglobal {
+        &__heading {
+            font-size: 20px;
+        }
+
+        &__desc {
+            font-size: 12px;
+        }
+    }
+
+}
+
+
+@media (max-width: 767px) {
+    .global {
+
+        margin: 50px auto;
+
+
+        &__heading {
+            font-size: 20px;
+        }
+
+        &__desc {
+            font-size: 12px;
+        }
+    }
+
 }
