--- a/src/assets/style/question.scss
+++ b/src/assets/style/question.scss
@@ -103,6 +103,54 @@
         }
     }
 
+    @media (max-width: 991px) {
+        &__title {
+            font-size: 16px;
+            margin-bottom: 10px;
+            white-space: nowrap;
+        }
 
+        &__btn {
+            font-size: 12px;
+            padding: 5px 10px;
+        }
+
+        &__subtitle {
+            font-size: 20px;
+
+
+            &::before {
+                content: "";
+                width: 20px;
+                height: 20px;
+
+            }
+        }
+
+        &__learn {
+            flex-wrap: wrap;
+        }
+
+        &__subimg {
+            order: 2;
+        }
+
+        &__theme {
+            text-align: center;
+        }
+    }
+
+
+    @media (max-width: 767px) {
+        &__title {
+            font-size: 10px;
+            margin-bottom: 5px;
+        }
+
+        &__btn {
+            font-size: 8px;
+
+        }
+    }
 
 }
